修改配置环境，可以运行动画。因为L4L5有三个箱子，已经在gamesystem里添加isBox3判断、三个箱子的胜利和失败判别。需要你在L4L5controller里的四个***BtnPressed方法中仿照2个箱子的逻辑，设计3个箱子的逻辑（分为目标位置没有箱子，是box1，是box2，是box3三种情况，每种情况内部增加可否推箱子判断，即箱子后面没有其他箱子和墙） 另外L3地图的controller里有很多移动问题题，我找了很久解决不了。你也可以尝试解决一下。

--- a/pom.xml
+++ b/pom.xml
@@ -21,14 +21,22 @@
             <artifactId>javafx-controls</artifactId>
             <version>23.0.1</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-graphics</artifactId>
+            <version>23.0.1</version>
+        </dependency>
         <!-- JavaFX FXML -->
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
             <version>23.0.1</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-base</artifactId>
+            <version>23.0.1</version>
+        </dependency>
         <!-- JUnit 测试库 -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
